--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,15 @@
     <button onclick="irDashboard()" class="w-full flex items-center gap-4 p-4 bg-blue-600 text-white rounded-2xl font-bold shadow-lg shadow-blue-900/20">
         <i class="fas fa-th-large"></i> Dashboard
     </button>
+    
     <button onclick="irMisEstaciones()" class="w-full flex items-center gap-4 p-4 text-slate-400 hover:bg-white/5 hover:text-white rounded-2xl transition-all font-semibold text-left">
         <i class="fas fa-store"></i> Mis Estaciones
     </button>
-    </nav>
-                <a href="#" class="flex items-center gap-4 p-4 text-slate-400 hover:bg-white/5 hover:text-white rounded-2xl transition-all font-semibold">
-                    <i class="fas fa-clipboard-list"></i> Mis Pedidos
-                </a>
+
+    <button class="w-full flex items-center gap-4 p-4 text-slate-400 hover:bg-white/5 hover:text-white rounded-2xl transition-all font-semibold text-left">
+        <i class="fas fa-clipboard-list"></i> Mis Pedidos
+    </button>
+</nav>
                 <a href="#" class="flex items-center gap-4 p-4 text-slate-400 hover:bg-white/5 hover:text-white rounded-2xl transition-all font-semibold">
                     <i class="fas fa-wallet"></i> Mis Créditos
                 </a>
