--- a/public/index.html
+++ b/public/index.html
@@ -524,6 +524,10 @@ function dibujarEstaciones() {
     }
 
     container.innerHTML = filtradas.map(est => {
+        
+        const cap = est.capacidad || { extra: 0, supreme: 0, diesel: 0 };
+        const vol = est.volumenActual || { extra: 0, supreme: 0, diesel: 0 };
+        const vta = est.ventaPromedio || { extra: 0, supreme: 0, diesel: 0 };
         // En tu consola vemos que el nombre viene en 'est.nombre'
         // NOTA: Como el servidor solo envía id/nombre/direccion, 
         // los valores de inventario (vol_extra, etc) podrían no estar llegando aún.
