--- a/public/index.html
+++ b/public/index.html
@@ -542,7 +542,7 @@ function dibujarEstaciones() {
                 </div>
             </div>
 
-            div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
             ${renderFuelCard('EXTRA', 'emerald', cap.extra || 0, vol.extra || 0, vta.extra || 0)}
             ${renderFuelCard('SUPREME', 'red', cap.supreme || 0, vol.supreme || 0, vta.supreme || 0)}
             ${Number(cap.diesel) > 0 
