--- a/public/index.html
+++ b/public/index.html
@@ -184,6 +184,30 @@
     </div>
 </main>
 
+<div id="pedidosView" class="hidden p-8 lg:p-12">
+    <header class="flex justify-between items-start mb-10">
+        <div>
+            <h1 class="text-4xl font-black tracking-tight text-slate-900">Mis Pedidos</h1>
+            <p class="text-slate-500 font-medium mt-1">Historial y seguimiento de suministros</p>
+        </div>
+        <button onclick="irDashboard()" class="bg-slate-800 text-white px-6 py-3 rounded-xl font-bold text-sm shadow-lg hover:bg-slate-700 transition-all">
+            <i class="fas fa-arrow-left mr-2"></i> Volver
+        </button>
+    </header>
+
+    <div class="flex gap-2 mb-8 overflow-x-auto pb-2 no-scrollbar">
+        <button onclick="filtrarPedidos('Todos')" class="filter-btn bg-slate-900 text-white px-6 py-2 rounded-full font-bold text-xs uppercase tracking-widest">Todos</button>
+        <button onclick="filtrarPedidos('Pendiente')" class="filter-btn bg-white text-slate-400 border border-slate-100 px-6 py-2 rounded-full font-bold text-xs uppercase tracking-widest hover:bg-orange-50 hover:text-orange-500">Pendientes</button>
+        <button onclick="filtrarPedidos('Aceptado')" class="filter-btn bg-white text-slate-400 border border-slate-100 px-6 py-2 rounded-full font-bold text-xs uppercase tracking-widest hover:bg-blue-50 hover:text-blue-500">Aceptados</button>
+        <button onclick="filtrarPedidos('En Ruta')" class="filter-btn bg-white text-slate-400 border border-slate-100 px-6 py-2 rounded-full font-bold text-xs uppercase tracking-widest hover:bg-purple-50 hover:text-purple-500">En Ruta</button>
+        <button onclick="filtrarPedidos('Entregado')" class="filter-btn bg-white text-slate-400 border border-slate-100 px-6 py-2 rounded-full font-bold text-xs uppercase tracking-widest hover:bg-emerald-50 hover:text-emerald-500">Entregados</button>
+    </div>
+
+    <div id="listaPedidosCompleta" class="grid grid-cols-1 gap-4">
+        <p class="text-slate-400 italic">Cargando pedidos...</p>
+    </div>
+</div>
+
     <div id="overlay" onclick="togglePanel()" class="fixed inset-0 bg-slate-900/40 backdrop-blur-sm z-40 hidden opacity-0 transition-opacity duration-300"></div>
     <div id="sidePanel" class="fixed right-0 top-0 h-full w-full max-w-lg bg-white z-50 shadow-2xl side-panel-transition translate-x-full p-10 overflow-y-auto">
         <div class="flex justify-between items-center mb-8">
