--- a/public/index.html
+++ b/public/index.html
@@ -759,7 +759,7 @@ async function renderizarPedidosLista(filtro = 'Todos') {
                 <div class="flex flex-wrap justify-between items-center gap-4">
                     <div class="flex items-center gap-4">
                         <div class="h-12 w-12 bg-${color}-50 text-${color}-600 rounded-2xl flex items-center justify-center text-xl">
-                            <i class="fas fa-truck-fast"></i>
+                            <i class="fa-clock"></i>
                         </div>
                         <div>
                             <span class="text-[10px] font-black uppercase text-${color}-600 tracking-widest">${p.estatus}</span>
