--- a/public/index.html
+++ b/public/index.html
@@ -315,9 +315,8 @@
                     <i class="fas fa-users-cog text-lg"></i>
                     <span class="font-bold text-sm uppercase tracking-widest">Operadores</span>
                 </a>
-                <a href="#" onclick="irUnidades()" class="flex items-center gap-3 px-6 py-4 text-slate-400 hover:text-white hover:bg-slate-800/50 transition-all rounded-2xl group">
+                <a href="#" onclick="irUnidades()" class="w-full flex items-center gap-4 p-4 text-slate-400 hover:bg-white/5 hover: text-white rounded-2xl transition-all fant-semibold text-left">
                     <i class="fas fa-truck-moving text-lg"></i>
-                    <span class="font-bold text-sm uppercase tracking-widest">Unidades</span>
                 </a>
             `;
             menuContainer.insertAdjacentHTML('beforeend', nuevosItems);
