--- a/public/index.html
+++ b/public/index.html
@@ -310,7 +310,10 @@
         // 3. INSERTAR BOTONES (Operadores y Unidades en minúsculas)
     const menuContainer = document.querySelector('nav .space-y-2') || document.querySelector('nav');
     
-        if (menuContainer) {
+        if (menuContainer && !document.getElementById('btn-operadores')) {
+        // Usamos exactamente tu clase de diseño
+        const estiloClase = "flex items-center p-4 text-slate-400 hover:text-white hover:bg-slate-800 rounded-xl mb-2 transition-all";
+        
             const nuevosItems = `
                 <a href="#" onclick="irOperadores()" class="flex items-center gap-3 px-6 py-4 text-slate-400 hover:text-white hover:bg-slate-800/50 transition-all rounded-2xl group">
                     <i class="fas fa-users-cog text-lg"></i>
