--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
 <button onclick="togglePanel()" class="hidden lg:flex ..."> + Nuevo Pedido </button>
     
             </div>
-            <button onclick="togglePanel()" class="bg-red-600 text-white px-8 py-4 rounded-2xl font-bold shadow-xl shadow-red-200 hover:scale-105 active:scale-95 transition-all">
+            <button onclick="togglePanel()" class="hidden lg:block bg-red-600 text-white px-8 py-4 rounded-2xl font-bold shadow-xl shadow-red-200 hover:scale-105 active:scale-95 transition-all">
                 + Nuevo Pedido
             </button>
         </header>
@@ -1104,7 +1104,8 @@ window.onload = initDashboard;
     </div>
 </div>
 
-<nav class="lg:hidden fixed bottom-0 left-0 right-0 bg-white border-t border-slate-100 px-6 py-3 flex justify-between items-center z-[100] shadow-[0_-5px_20px_rgba(0,0,0,0.05)]">
+<nav class="lg:hidden fixed bottom-0 left-0 right-0 bg-white border-t border-slate-100 pb-5 pt-3 z-[100] shadow-[0_-5px_20px_rgba(0,0,0,0.05)]">
+    <div class="max-w-md mx-auto flex justify-around items-center px-2">
     
     <button onclick="irDashboard()" class="flex flex-col items-center gap-1 text-blue-600">
         <i class="fas fa-th-large text-lg"></i>
