--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POLICON Pedidos | Iniciar Sesión</title>
+    <title>MOBIL Pedidos | Iniciar Sesión</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     <style>body { font-family: 'Inter', sans-serif; }</style>
@@ -15,7 +15,7 @@
             <div class="bg-red-600 w-16 h-16 rounded-2xl flex items-center justify-center mx-auto mb-4 shadow-lg shadow-red-200">
                 <i class="fas fa-gas-pump text-white text-2xl"></i>
             </div>
-            <h1 class="text-3xl font-black tracking-tighter text-slate-900">POLICON Pedidos</h1>
+            <h1 class="text-3xl font-black tracking-tighter text-slate-900">MOBIL Pedidos</h1>
             <p class="text-slate-400 font-medium mt-2 text-sm uppercase tracking-widest">Portal de Gestión</p>
         </div>
 
